<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFi PV</string>

    <!-- OptionMenu -->
    <string name="action_about">About</string>
    
    <string name="dialog_msg">Getting WiFi Networks with Superuser&#8230;</string>
    
    <!-- NoSu Dialog -->
	<string name="dialog_msg_nosu">It\'s seems you don\'t have Superuser permission. :(
	    Is your phone Rooted?</string>
	<string name="dialog_title_nosu">Superuser Permission Error.</string>
	<string name="ok">OK</string>

    <!-- About -->
    <string name="close">Close</string>
    <string name="about_title">About WiFi PV</string>
    <string name="ssid">SSID:      </string>
    <string name="pass">Password:       </string>
    <string name="key">Key Type:       </string>
    <string name="identity">Identity:       </string>
    <string name="default_s">Default</string>
    <string name="show_qr">Show QR Code</string>
    <string name="copy">Copy</string>
    <string name="share">Send/Share</string>
    <string name="error_share">Ops! An Error has occurred while sharing</string>
    <string name="send_to">Send QRCode</string>
    <string name="copied">Copied!</string>
    <string name="view_pass">Touch on a WiFi to show its Password</string>

    <string name="pirate">Pirate!</string>
    <string name="license">License</string>
    <string name="me">Me</string>

    <string name="about_content">"WiFi PV by Davide \"TheZero\" Silvetti (io@thezero.org) 2015"</string>
    <string name="about_source">"Source Code\nFeel Free, Be Free"</string>
    <string name="twitter">Twitter</string>
    <string name="github">Github</string>
    <string name="plus">Google+</string>

    <string name="twitter_name">"@Th3Zer0"</string>
    <string name="github_name">"@TheZ3ro"</string>
    <string name="plus_name">+DavideTheZero</string>

    <string name="l_lfab">"zxing\n by @zxing"</string>
    <string name="l_ltab1">"Android_Tabbed_Dialog\n by @kiteflo"</string>
    <string name="l_ltab2">"PagerSlidingTabStrip\n by @jpardogo"</string>

</resources>
