<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_lfab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_initial_background"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_cardbank"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/lfab_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/github"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/lfab_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_lfab"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/lfab_icon"
                android:layout_toEndOf="@+id/lfab_icon" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_ltab1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_initial_background"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_cardbank"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/ltab1_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/github"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/ltab1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_ltab1"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ltab1_icon"
                android:layout_toEndOf="@+id/ltab1_icon" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_ltab2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_initial_background"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_cardbank"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/ltab2_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/github"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/ltab2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_ltab2"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ltab2_icon"
                android:layout_toEndOf="@+id/ltab2_icon" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>